Remove demo APIs and pmm-managed-test tool.
