# api/demo.pb.go
@@ -1,253 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// source: demo.proto
-
-package api
-
-import proto "github.com/golang/protobuf/proto"
-import fmt "fmt"
-import math "math"
-import _ "google.golang.org/genproto/googleapis/api/annotations"
-
-import (
-	context "golang.org/x/net/context"
-	grpc "google.golang.org/grpc"
-)
-
-// Reference imports to suppress errors if they are not otherwise used.
-var _ = proto.Marshal
-var _ = fmt.Errorf
-var _ = math.Inf
-
-type DemoPingType int32
-
-const (
-	DemoPingType_PING DemoPingType = 0
-	DemoPingType_PONG DemoPingType = 1
-)
-
-var DemoPingType_name = map[int32]string{
-	0: "PING",
-	1: "PONG",
-}
-var DemoPingType_value = map[string]int32{
-	"PING": 0,
-	"PONG": 1,
-}
-
-func (x DemoPingType) String() string {
-	return proto.EnumName(DemoPingType_name, int32(x))
-}
-func (DemoPingType) EnumDescriptor() ([]byte, []int) { return fileDescriptor2, []int{0} }
-
-type DemoPingRequest struct {
-	Type   DemoPingType `protobuf:"varint,1,opt,name=type,enum=api.DemoPingType" json:"type,omitempty"`
-	Cookie uint64       `protobuf:"fixed64,2,opt,name=cookie" json:"cookie,omitempty"`
-}
-
-func (m *DemoPingRequest) Reset()                    { *m = DemoPingRequest{} }
-func (m *DemoPingRequest) String() string            { return proto.CompactTextString(m) }
-func (*DemoPingRequest) ProtoMessage()               {}
-func (*DemoPingRequest) Descriptor() ([]byte, []int) { return fileDescriptor2, []int{0} }
-
-func (m *DemoPingRequest) GetType() DemoPingType {
-	if m != nil {
-		return m.Type
-	}
-	return DemoPingType_PING
-}
-
-func (m *DemoPingRequest) GetCookie() uint64 {
-	if m != nil {
-		return m.Cookie
-	}
-	return 0
-}
-
-type DemoPingResponse struct {
-	Type   DemoPingType `protobuf:"varint,1,opt,name=type,enum=api.DemoPingType" json:"type,omitempty"`
-	Cookie uint64       `protobuf:"fixed64,2,opt,name=cookie" json:"cookie,omitempty"`
-}
-
-func (m *DemoPingResponse) Reset()                    { *m = DemoPingResponse{} }
-func (m *DemoPingResponse) String() string            { return proto.CompactTextString(m) }
-func (*DemoPingResponse) ProtoMessage()               {}
-func (*DemoPingResponse) Descriptor() ([]byte, []int) { return fileDescriptor2, []int{1} }
-
-func (m *DemoPingResponse) GetType() DemoPingType {
-	if m != nil {
-		return m.Type
-	}
-	return DemoPingType_PING
-}
-
-func (m *DemoPingResponse) GetCookie() uint64 {
-	if m != nil {
-		return m.Cookie
-	}
-	return 0
-}
-
-func init() {
-	proto.RegisterType((*DemoPingRequest)(nil), "api.DemoPingRequest")
-	proto.RegisterType((*DemoPingResponse)(nil), "api.DemoPingResponse")
-	proto.RegisterEnum("api.DemoPingType", DemoPingType_name, DemoPingType_value)
-}
-
-// Reference imports to suppress errors if they are not otherwise used.
-var _ context.Context
-var _ grpc.ClientConn
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the grpc package it is being compiled against.
-const _ = grpc.SupportPackageIsVersion4
-
-// Client API for Demo service
-
-type DemoClient interface {
-	Ping(ctx context.Context, in *DemoPingRequest, opts ...grpc.CallOption) (*DemoPingResponse, error)
-	PingStream(ctx context.Context, opts ...grpc.CallOption) (Demo_PingStreamClient, error)
-}
-
-type demoClient struct {
-	cc *grpc.ClientConn
-}
-
-func NewDemoClient(cc *grpc.ClientConn) DemoClient {
-	return &demoClient{cc}
-}
-
-func (c *demoClient) Ping(ctx context.Context, in *DemoPingRequest, opts ...grpc.CallOption) (*DemoPingResponse, error) {
-	out := new(DemoPingResponse)
-	err := grpc.Invoke(ctx, "/api.Demo/Ping", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *demoClient) PingStream(ctx context.Context, opts ...grpc.CallOption) (Demo_PingStreamClient, error) {
-	stream, err := grpc.NewClientStream(ctx, &_Demo_serviceDesc.Streams[0], c.cc, "/api.Demo/PingStream", opts...)
-	if err != nil {
-		return nil, err
-	}
-	x := &demoPingStreamClient{stream}
-	return x, nil
-}
-
-type Demo_PingStreamClient interface {
-	Send(*DemoPingRequest) error
-	Recv() (*DemoPingResponse, error)
-	grpc.ClientStream
-}
-
-type demoPingStreamClient struct {
-	grpc.ClientStream
-}
-
-func (x *demoPingStreamClient) Send(m *DemoPingRequest) error {
-	return x.ClientStream.SendMsg(m)
-}
-
-func (x *demoPingStreamClient) Recv() (*DemoPingResponse, error) {
-	m := new(DemoPingResponse)
-	if err := x.ClientStream.RecvMsg(m); err != nil {
-		return nil, err
-	}
-	return m, nil
-}
-
-// Server API for Demo service
-
-type DemoServer interface {
-	Ping(context.Context, *DemoPingRequest) (*DemoPingResponse, error)
-	PingStream(Demo_PingStreamServer) error
-}
-
-func RegisterDemoServer(s *grpc.Server, srv DemoServer) {
-	s.RegisterService(&_Demo_serviceDesc, srv)
-}
-
-func _Demo_Ping_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(DemoPingRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(DemoServer).Ping(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/api.Demo/Ping",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(DemoServer).Ping(ctx, req.(*DemoPingRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _Demo_PingStream_Handler(srv interface{}, stream grpc.ServerStream) error {
-	return srv.(DemoServer).PingStream(&demoPingStreamServer{stream})
-}
-
-type Demo_PingStreamServer interface {
-	Send(*DemoPingResponse) error
-	Recv() (*DemoPingRequest, error)
-	grpc.ServerStream
-}
-
-type demoPingStreamServer struct {
-	grpc.ServerStream
-}
-
-func (x *demoPingStreamServer) Send(m *DemoPingResponse) error {
-	return x.ServerStream.SendMsg(m)
-}
-
-func (x *demoPingStreamServer) Recv() (*DemoPingRequest, error) {
-	m := new(DemoPingRequest)
-	if err := x.ServerStream.RecvMsg(m); err != nil {
-		return nil, err
-	}
-	return m, nil
-}
-
-var _Demo_serviceDesc = grpc.ServiceDesc{
-	ServiceName: "api.Demo",
-	HandlerType: (*DemoServer)(nil),
-	Methods: []grpc.MethodDesc{
-		{
-			MethodName: "Ping",
-			Handler:    _Demo_Ping_Handler,
-		},
-	},
-	Streams: []grpc.StreamDesc{
-		{
-			StreamName:    "PingStream",
-			Handler:       _Demo_PingStream_Handler,
-			ServerStreams: true,
-			ClientStreams: true,
-		},
-	},
-	Metadata: "demo.proto",
-}
-
-func init() { proto.RegisterFile("demo.proto", fileDescriptor2) }
-
-var fileDescriptor2 = []byte{
-	// 238 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0xe2, 0x4a, 0x49, 0xcd, 0xcd,
-	0xd7, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0x62, 0x4e, 0x2c, 0xc8, 0x94, 0x92, 0x49, 0xcf, 0xcf,
-	0x4f, 0xcf, 0x49, 0xd5, 0x4f, 0x2c, 0xc8, 0xd4, 0x4f, 0xcc, 0xcb, 0xcb, 0x2f, 0x49, 0x2c, 0xc9,
-	0xcc, 0xcf, 0x2b, 0x86, 0x28, 0x51, 0x0a, 0xe0, 0xe2, 0x77, 0x49, 0xcd, 0xcd, 0x0f, 0xc8, 0xcc,
-	0x4b, 0x0f, 0x4a, 0x2d, 0x2c, 0x4d, 0x2d, 0x2e, 0x11, 0x52, 0xe5, 0x62, 0x29, 0xa9, 0x2c, 0x48,
-	0x95, 0x60, 0x54, 0x60, 0xd4, 0xe0, 0x33, 0x12, 0xd4, 0x4b, 0x2c, 0xc8, 0xd4, 0x83, 0xa9, 0x09,
-	0xa9, 0x2c, 0x48, 0x0d, 0x02, 0x4b, 0x0b, 0x89, 0x71, 0xb1, 0x25, 0xe7, 0xe7, 0x67, 0x67, 0xa6,
-	0x4a, 0x30, 0x29, 0x30, 0x6a, 0xb0, 0x05, 0x41, 0x79, 0x4a, 0x81, 0x5c, 0x02, 0x08, 0x13, 0x8b,
-	0x0b, 0xf2, 0xf3, 0x8a, 0x53, 0x29, 0x34, 0x52, 0x4b, 0x89, 0x8b, 0x07, 0x59, 0xb5, 0x10, 0x07,
-	0x17, 0x4b, 0x80, 0xa7, 0x9f, 0xbb, 0x00, 0x03, 0x98, 0xe5, 0xef, 0xe7, 0x2e, 0xc0, 0x68, 0xd4,
-	0xc3, 0xc8, 0xc5, 0x02, 0x52, 0x24, 0xe4, 0xca, 0xc5, 0x02, 0x52, 0x28, 0x24, 0x82, 0x62, 0x0b,
-	0xd4, 0x73, 0x52, 0xa2, 0x68, 0xa2, 0x10, 0x07, 0x2a, 0x09, 0x34, 0x5d, 0x7e, 0x32, 0x99, 0x89,
-	0x4b, 0x88, 0x43, 0xbf, 0xcc, 0x40, 0xbf, 0x00, 0xa4, 0xdd, 0x96, 0x8b, 0x0b, 0xa4, 0x22, 0xb8,
-	0xa4, 0x28, 0x35, 0x31, 0x97, 0x24, 0xc3, 0x34, 0x18, 0x0d, 0x18, 0x93, 0xd8, 0xc0, 0xc1, 0x6b,
-	0x0c, 0x08, 0x00, 0x00, 0xff, 0xff, 0xed, 0x2b, 0x3b, 0xdc, 0x8f, 0x01, 0x00, 0x00,
-}
